--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- link untuk css -->
-    <link href="src/stylesheet.css" rel="stylesheet" />
+    <link href="src/style.css" rel="stylesheet" />
     <!-- link untuk atur responsive -->
     <link href="src/responsive.css" rel="stylesheet" />
     <!-- link import font google -->
